--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">OnlinerNews</string>
-    <string name="auto">АВТО</string>
-    <string name="people">ЛЮДИ</string>
-    <string name="tech">ТЕХНОЛОГИИ</string>
-    <string name="blah_blah_blah">Blah</string>
+    <string name="auto">Авто</string>
+    <string name="people">Люди</string>
+    <string name="tech">Техно</string>
 </resources>
